# BSUrepos

CMakeProject1/CMakeProject1/: CMakeLists.txt
ConsoleApplication1/: ConsoleApplication1.sln
ConsoleApplication1/ConsoleApplication1/: ConsoleApplication1.cpp  ConsoleApplication1.vcxproj
ConsoleApplication1/Debug/: ConsoleApplication1.ilk
ConsoleApplication10/: ConsoleApplication10.sln
ConsoleApplication10/ConsoleApplication10/: ConsoleApplication10.cpp  (+1 more)
ConsoleApplication11/: ConsoleApplication11.sln
ConsoleApplication12/: ConsoleApplication12.sln
ConsoleApplication1234/: ConsoleApplication1234.sln
ConsoleApplication13/: ConsoleApplication13.sln
ConsoleApplication14/: ConsoleApplication14.sln
ConsoleApplication2/: ConsoleApplication2.sln
ConsoleApplication3/: ConsoleApplication3.sln
ConsoleApplication4/: ConsoleApplication4.sln
ConsoleApplication5/: ConsoleApplication5.sln
ConsoleApplication6/: ConsoleApplication6.sln
ConsoleApplication7/: ConsoleApplication7.sln
ConsoleApplication8/: ConsoleApplication8.sln
ConsoleApplication878/: ConsoleApplication878.sln
ConsoleApplication9/: ConsoleApplication9.sln
GoogleTest/: GoogleTest.sln
Gronsfeld/: Gronsfeld.sln
KR_Var1/: KR_Var1.sln
MyQueue/: MyQueue.sln
MySt/: MySt.sln
MySt/Debug/: MySt.ilk
Project1/: Project1.sln
Project2/: Project2.sln
ShopCatalog/: ShopCatalog.sln
Vocabulary/: CMakeLists.txt  Vocabulary.sln
Vocabulary/Debug/: Vocabulary.ilk
Vocabulary/Vocabulary/: BiDirectionalListOnArray.cpp  BiDirectionalListOnArray.h  FileReader.cpp  FileReader.h  Vocabulary.cpp  Vocabulary.h  Vocabulary.vcxproj  Vocabulary.vcxproj.filters  WordCard.cpp  WordCard.h  containers.h
Vocabulary/Vocabulary/Debug/: Vocabulary.exe.recipe  vc142.idb
Vocabulary/Vocabulary/Debug/Vocabulary.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Vocabulary.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
bi_directional_list_on_array/bi_directional_list_on_array/: CMakeLists.txt  bidirectional_list_on_array.cpp  bidirectional_list_on_array.h  containers.h  file_reader.cpp  file_reader.h  input.txt  main.cpp  vocabulary.cpp  vocabulary.h  word_card.cpp  word_card.h
binary_tree/: binary_tree.sln
diff_symbols/: diff_symbols.sln
double_copies/: double_copies.sln
dynlistclass/: dynlistclass.sln
fraction/: fraction.sln
huffman_code/: huffman_code.sln
nitwerfwer/: nitwerfwer.sln
polska/: polska.sln
queue_linked_list/: queue_linked_list.sln
someproject/: someproject.sln
tedty/: tedty.sln
(+431 files in other folders)
